--- a/pudding-ppt/index.html
+++ b/pudding-ppt/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-
-<head>
-    <meta charset="utf-8">
-    <title>pudding</title>
-    <link href="/display-collection/pudding-ppt/" rel="preload" as="style">
-    <link href="/display-collection/pudding-ppt/css/chunk-vendors.75d456e0.css" rel="preload" as="style">
-    <link href="/display-collection/pudding-ppt/js/app.bdc2828f.js" rel="preload" as="script">
-    <link href="/display-collection/pudding-ppt/js/chunk-vendors.8e9947e1.js" rel="preload" as="script">
-    <link href="/display-collection/pudding-ppt/css/chunk-vendors.75d456e0.css" rel="stylesheet">
-    <link href="/display-collection/pudding-ppt/" rel="stylesheet">
-</head>
-
-<body>
-    <div id="app"></div>
-    <script src="/display-collection/pudding-ppt/js/chunk-vendors.8e9947e1.js"></script>
-    <script src="/display-collection/pudding-ppt/js/app.bdc2828f.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><title>pudding</title><link href="/display-collection/pudding-ppt/css/app.be8c9257.css" rel="preload" as="style"><link href="/display-collection/pudding-ppt/css/chunk-vendors.75d456e0.css" rel="preload" as="style"><link href="/display-collection/pudding-ppt/js/app.58931555.js" rel="preload" as="script"><link href="/display-collection/pudding-ppt/js/chunk-vendors.8e9947e1.js" rel="preload" as="script"><link href="/display-collection/pudding-ppt/css/chunk-vendors.75d456e0.css" rel="stylesheet"><link href="/display-collection/pudding-ppt/css/app.be8c9257.css" rel="stylesheet"></head><body><div id="app"></div><script src="/display-collection/pudding-ppt/js/chunk-vendors.8e9947e1.js"></script><script src="/display-collection/pudding-ppt/js/app.58931555.js"></script></body></html>
