--- a/webpack/核心原理/对Webpack未来的展望.html
+++ b/webpack/核心原理/对Webpack未来的展望.html
@@ -149,8 +149,8 @@
                         href="/display-collection/webpack/核心原理/对Webpack未来的展望.html#新的竞争对手出现"
                         class="sidebar-link">新的竞争对手出现</a></li>
                     <li class="sidebar-sub-header"><a
-                        href="/display-collection/webpack/核心原理/对Webpack未来的展望.html#webpack-的对策"
-                        class="sidebar-link">webpack 的对策</a></li>
+                        href="/display-collection/webpack/核心原理/对Webpack未来的展望.html#一些想法"
+                        class="sidebar-link">一些想法</a></li>
                     <li class="sidebar-sub-header"><a href="/display-collection/webpack/核心原理/对Webpack未来的展望.html#总结"
                         class="sidebar-link">总结</a></li>
                   </ul>
@@ -226,8 +226,8 @@
                   points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9">
                 </polygon>
               </svg></a></p>
-          <h2 id="webpack-的对策"><a href="#webpack-的对策" class="header-anchor">#</a> 我的一些推演 </h2>
-          <p>vite 等工具依靠现代浏览器的特性，除去了开发环境下的打包环节，减少了项目修改后等待代码打包的时间花费，加上尤大的亲自鼓吹站台，吸引了不少的用户。不过Webpack的强大以及模块化思想的实践还不是这些新生代工具一时半会可以替代的，最主要的原因是Webpack已经有了庞大的工程基础，例如vite这类的工具其实还是通过技术手段解决js语音编写的构建工具的性能瓶颈，万一有一天js语言的性能瓶颈能够有所突破呢，一样能够很大程度解决问题。
+          <h2 id="一些想法"><a href="#一些想法" class="header-anchor">#</a> 一些想法 </h2>
+          <p>vite 等工具依靠现代浏览器的特性，除去了开发环境下的打包环节，减少了项目修改后等待代码打包的时间花费，加上尤大的亲自鼓吹站台，吸引了不少的用户。不过Webpack的强大以及模块化思想的实践还不是这些新生代工具一时半会可以替代的，最主要的原因是Webpack已经有了庞大的工程基础，例如vite这类的工具其实还是通过技术手段解决js语音编写的构建工具的性能瓶颈，我记得20年vueConf上，就有个老哥说：“我M1+64G运存，有必要吗？”，当时有点想笑，但感觉其实也是一个思路，如果从js语言性能瓶颈能够有所突破呢，Webpack的性能问题也就自然解决了。
           </p>
           <h2 id="总结"><a href="#总结" class="header-anchor">#</a> 总结</h2>
           <p>时间有限，这次就讲这么多把，其实关于 Webpack 深入的内容还可以引申出更多的知识，比如 tapable、acorn、js 面向切面编程等。Webpack
