--- a/webpack/核心原理/对Webpack未来的展望.html
+++ b/webpack/核心原理/对Webpack未来的展望.html
@@ -198,7 +198,7 @@
               <p>性能问题的改善：之前打包的一个重要原因是 HTTP/1.1 的特性导致，我们合并请求来优化性能；而如今 HTTP/2 普及之后，这个性能问题不像以前那么突出了。</p>
             </li>
             <li>
-              <p>打包的必要性：打包工具的存在主要就是为了处理模块化与合并请求，而以上两点基本解决这两个问题；再加之打包工具越来越复杂，也许未来，其存在的必要性也会引发质疑。</p>
+              <p>打包的必要性：打包工具的存在主要就是为了处理模块化与合并请求，而以上两点基本解决这两个问题；再加之打包工具越来越复杂，工程复杂的情况下性能明显下降，其存在的必要性肯定也会引发质疑。</p>
             </li>
           </ul>
           <h2 id="新的竞争对手出现"><a href="#新的竞争对手出现" class="header-anchor">#</a> 新的竞争对手出现</h2>
@@ -227,7 +227,7 @@
                 </polygon>
               </svg></a></p>
           <h2 id="一些想法"><a href="#一些想法" class="header-anchor">#</a> 一些想法 </h2>
-          <p>vite 等工具依靠现代浏览器的特性，除去了开发环境下的打包环节，减少了项目修改后等待代码打包的时间花费，加上尤大的亲自鼓吹站台，吸引了不少的用户。不过Webpack的强大以及模块化思想的实践还不是这些新生代工具一时半会可以替代的，最主要的原因是Webpack已经有了庞大的工程基础，例如vite这类的工具其实还是通过技术手段解决js语音编写的构建工具的性能瓶颈，我记得20年vueConf上，就有个老哥说：“我M1+64G运存，有必要吗？”，当时有点想笑，但感觉其实也是一个思路，如果从js语言性能瓶颈能够有所突破呢，Webpack的性能问题也就自然解决了。
+          <p>vite 等工具依靠现代浏览器的特性，除去了开发环境下的打包环节，减少了项目修改后等待代码打包的时间花费，加上尤大的亲自鼓吹站台，吸引了不少的用户。不过Webpack的强大以及模块化思想的实践还不是这些新生代工具一时半会可以替代的，最主要的原因是Webpack已经有了庞大的工程基础，例如vite这类的工具其实还是通过技术手段解决js语言编写的构建工具的性能瓶颈，我记得20年vueConf上，就有个老哥说：“我M1+64G运存，有必要吗？”，当时有点想笑，但感觉其实也是一个思路，如果从js语言性能瓶颈能够有所突破呢，Webpack的性能问题也就自然解决了。
           </p>
           <h2 id="总结"><a href="#总结" class="header-anchor">#</a> 总结</h2>
           <p>时间有限，这次就讲这么多把，其实关于 Webpack 深入的内容还可以引申出更多的知识，比如 tapable、acorn、js 面向切面编程等。Webpack
